--- a/assets/sass/_loader.scss
+++ b/assets/sass/_loader.scss
@@ -17,10 +17,14 @@ $dash-max: length($dash-colors);
  * Loader
  */
 
+#loader-text {
+    font-family: 'Shrikhand', cursive;
+    font-size: 160px;
+}
 .loader {
     position: fixed; top: 0; right: 0; bottom: 0; left: 0; z-index: 100;
     display: flex; flex-direction: column; justify-content: center; align-items: center;
-    background-color: rgba($white, 0.8);
+    background-color: rgba($white, 0.9);
     backdrop-filter: blur(.75rem);
     will-change: transform, opacity;
     transform: translateX(100%);
@@ -44,10 +48,6 @@ $dash-max: length($dash-colors);
         @include media-max('sm') {
             width: 100%;
         }
-    }
-    #loader-text {
-        font-family: 'Shrikhand', cursive;
-        font-size: 10rem;
     }
     &-text {
         fill: none;
