--- a/assets/sass/_reset.scss
+++ b/assets/sass/_reset.scss
@@ -25,7 +25,7 @@ h1, h2, h3, h4, h5, h6, p {
     font-size: inherit;
     font-weight: normal;
 }
-ul, li {
+ul, ol, li {
    margin:0;
    padding: 0;
    text-indent: 0;
